source/blender/makesdna/DNA_scene_types.h
@@ -1826,6 +1826,7 @@ typedef enum SymmetryFlags {
 } SymmetryFlags;
 
 #define PAINT_SYMM_AXIS_ALL (PAINT_SYMM_X | PAINT_SYMM_Y | PAINT_SYMM_Z)
+#define PAINT_TILE_AXIS_ALL (PAINT_TILE_X | PAINT_TILE_Y | PAINT_TILE_Z)
 
 /* Sculpt.flags */
 /* These can eventually be moved to paint flags? */
